<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/background" >

    <ProgressBar
        android:id="@+id/pbCargando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="?android:attr/buttonBarStyle" >

        <Button
            android:id="@+id/btCamara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:background="@drawable/ic_launcher"
            android:onClick="camara"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btGaleria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@drawable/galeria"
            android:onClick="galeria"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <SlidingDrawer
        android:id="@+id/slidingDrawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:content="@+id/content"
        android:handle="@+id/btAjustes" >

        <Button
            android:id="@+id/btAjustes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ajustes" />
        
        <ScrollView
  			android:id="@id/content"
 			android:layout_width="fill_parent"
 			android:layout_height="fill_parent" >

       	 	<LinearLayout
           	 	android:id="@+id/content"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
         	  	android:background="@drawable/fondo_parametros"
         	   	android:orientation="vertical" 
         	   	android:paddingBottom="30dp">

       	 		<TextView
       	 		    android:id="@+id/tvFormato"
       	 		    android:layout_width="wrap_content"
       	 		    android:layout_height="wrap_content"
       	 		    android:layout_gravity="center"
       	 		    android:layout_marginTop="30dp"
       	 		    android:text="@string/tv_formato"
       	 		    android:textColor="#FFFFFF"
       	 		    android:textAppearance="?android:attr/textAppearanceSmall" />

        	    <RadioGroup
        	        android:id="@+id/rgFormato"
        	        android:layout_width="wrap_content"
        	        android:layout_height="wrap_content"
        	        android:layout_gravity="center"
        	        android:layout_marginBottom="30dp"
        	        android:orientation="horizontal" >

                	<RadioButton
                    	android:id="@+id/rbJpg"
  						android:layout_width="wrap_content"
  						android:layout_height="wrap_content"  
       					android:layout_gravity="center"  
       					android:layout_marginRight="10dp"
                    	android:text="@string/rb_jpg"                    	
       	 		    	android:textColor="#FFFFFF"
       	 		    	android:button="@drawable/btn_radio_holo_light"
       	 		    	android:checked="true"
       	 		    	android:onClick="escribirSp" />

                	<RadioButton
                	    android:id="@+id/rbPng"
 						android:layout_width="wrap_content"
  						android:layout_height="wrap_content"   
       					android:layout_gravity="center"
       					android:layout_marginLeft="10dp"
                	    android:text="@string/rb_png"                	    
       	 		    	android:textColor="#FFFFFF"
       	 		    	android:button="@drawable/btn_radio_holo_light"
       	 		    	android:onClick="escribirSp" />
            	</RadioGroup>

            	<TextView
                	android:id="@+id/tvAlmacenamiento"
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:layout_gravity="center"
                	android:text="@string/tv_almacenamiento"
       	 		    android:textColor="#FFFFFF"
                	android:textAppearance="?android:attr/textAppearanceSmall" />

            	<Switch
                	android:id="@+id/swAlmacenamiento"
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:layout_gravity="center"
                	android:textOff="@string/switch_publica"
                	android:textOn="@string/switch_privada" 
                	android:layout_marginBottom="30dp"
       	 		    android:onClick="escribirSp"/>

            	<TextView
                	android:id="@+id/tvNombre"
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:layout_gravity="center"
                	android:text="@string/tv_nombre"
       	 		    android:textColor="#FFFFFF"
                	android:textAppearance="?android:attr/textAppearanceSmall" />

            	<ToggleButton
                	android:id="@+id/tbNombre"
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:layout_gravity="center"
       	 		    android:textColor="#FFFFFF"                	
                	android:checked="true"
       	 		    android:onClick="escribirSp" />

            	<EditText
                	android:id="@+id/etNombre"
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:layout_gravity="center"
                	android:ems="10"
                	android:inputType="text"
       	 		    android:textColor="#FFFFFF"
       	 		    android:textCursorDrawable="@drawable/diseno_cursor"
       	 		    android:onClick="escribirSp" >

            	</EditText>
            
        	</LinearLayout>
        
		</ScrollView>
	
    </SlidingDrawer>

</LinearLayout>